# TrendLab

./: .gitignore  .tokeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.bat  build.ps1  deny.toml  gpu-sweep.bat  run-tui-with-logs.ps1  run_gpu_sweep.ps1  test_data.rs  view-yolo-logs.ps1
.cargo/: config.toml
.claude/: rules.md  settings.local.json
.claude/agents/: bdd-test-author.md  data-provider-expert.md  financial-charts-expert.md  metrics-analyst.md  pine-artifact-writer.md  polars-expert.md  rust-architect.md  tauri-expert.md  trend-following-expert.md  web-frontend-expert.md
.claude/plans/: development-plan.md  twinkling-humming-stardust.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  daily-scan.yml  release.yml
apps/trendlab-gui/: README.md
apps/trendlab-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/trendlab-gui/src-tauri/artifacts/: cross_symbol_leaderboard.json  leaderboard.json
apps/trendlab-gui/src-tauri/capabilities/: default.json
apps/trendlab-gui/src-tauri/src/: error.rs  events.rs  jobs.rs  lib.rs  main.rs  state.rs
apps/trendlab-gui/src-tauri/src/commands/: chart.rs  data.rs  jobs.rs  mod.rs  results.rs  strategy.rs  sweep.rs  system.rs  yolo.rs
artifacts/: cross_symbol_leaderboard.json  leaderboard.json
configs/: README.md  gpu_mega_sweep.yaml  universe.toml  watchlist.toml
crates/trendlab-bdd/: Cargo.toml
crates/trendlab-bdd/src/: lib.rs
crates/trendlab-bdd/tests/: bdd.rs
crates/trendlab-bdd/tests/features/: artifact_parity.feature  backtest.feature  costs.feature  data_quality.feature  indicators.feature  invariants.feature  provider.feature  pyramiding.feature  strategy_52wk_high.feature  strategy_aroon.feature  strategy_bollinger_squeeze.feature  strategy_cci.feature  strategy_darvas_box.feature  strategy_dmi_adx.feature  strategy_donchian.feature  strategy_ensemble.feature  strategy_heikin_ashi.feature  strategy_ichimoku.feature  strategy_keltner.feature  strategy_larry_williams.feature  strategy_ma_crossover.feature  strategy_macd.feature  strategy_macd_adx.feature  strategy_opening_range.feature  strategy_oscillator_confluence.feature  strategy_parabolic_sar.feature  strategy_roc.feature  strategy_rsi.feature  strategy_rsi_bollinger.feature  strategy_short_selling.feature  strategy_starc.feature  strategy_stochastic.feature  strategy_supertrend.feature  strategy_tsmom.feature  strategy_turtle_s1.feature  strategy_turtle_s2.feature  strategy_williams_r.feature  sweep.feature  visualization.feature  volatility_sizing.feature
crates/trendlab-cli/: Cargo.toml
crates/trendlab-cli/src/: lib.rs  main.rs
crates/trendlab-cli/src/commands/: artifact.rs  data.rs  html_report.rs  mod.rs  report.rs  run.rs  scan.rs  sweep.rs  terminal.rs
crates/trendlab-core/: Cargo.toml
crates/trendlab-core/benches/: sweep_benchmarks.rs
crates/trendlab-core/examples/: test_load.rs
crates/trendlab-core/src/: analysis.rs  analysis_polars.rs  artifact.rs  backtest.rs  backtest_polars.rs  bar.rs  clustering.rs  error.rs  exploration.rs  indicator_cache.rs  indicators.rs  indicators_polars.rs  latin_hypercube.rs  leaderboard.rs  lib.rs  metrics.rs  sector_analysis.rs  sizing.rs  statistics.rs  strategy.rs  strategy_v2.rs  sweep.rs  sweep_polars.rs  universe.rs  validation.rs
crates/trendlab-core/src/data/: mod.rs  parquet.rs  provider.rs  quality.rs  yahoo.rs
crates/trendlab-engine/: Cargo.toml
crates/trendlab-engine/src/: lib.rs  worker.rs
crates/trendlab-engine/src/app/: chart_state.rs  data.rs  mod.rs  navigation.rs  randomization.rs  results.rs  strategies.rs  sweep.rs  utils.rs  yolo.rs
crates/trendlab-launcher/: Cargo.toml
crates/trendlab-launcher/src/: deprecation.rs  exec.rs  lib.rs  main.rs  prompt.rs
crates/trendlab-launcher/src/companion/: input.rs  mod.rs  state.rs  view.rs
crates/trendlab-launcher/src/ipc/: client.rs  mod.rs  server.rs  types.rs
crates/trendlab-logging/: Cargo.toml
crates/trendlab-logging/src/: ipc_layer.rs  lib.rs
crates/trendlab-tui/: Cargo.toml
crates/trendlab-tui/src/: app.rs  main.rs  ui.rs  worker.rs
crates/trendlab-tui/src/panels/: analysis.rs  chart.rs  data.rs  help.rs  mod.rs  results.rs  strategy.rs  sweep.rs
crates/trendlab-tui/src/panels/chart/: candlestick.rs  colors.rs  empty_states.rs  equity.rs  formatters.rs  info.rs  mod.rs  overlays.rs  strategy.rs  volume.rs
docs/: AUDIT_COMPLETE.md  AUDIT_FINDINGS.md  AUDIT_FINDINGS_TEMPLATE.md  AUDIT_PLAN.md  AUDIT_PROGRESS.md  AUDIT_QUICK_START.md  AUDIT_SUMMARY.md  PROJECT_OVERVIEW.md  architecture.md  assumptions.md  bdd-style.md  debugging.md  roadmap-gui-resurrection.md  roadmap-tauri-gui.md  roadmap-v2-strategies.md  schema.md
docs/adr/: 0001-fill-model.md  README.md
fixtures/: README.md
fixtures/synth/: 52wk_high_20.csv  aroon_30.csv  bollinger_squeeze_50.csv  costs_roundtrip.csv  darvas_box_25.csv  dmi_trending_40.csv  donchian_10.csv  donchian_breakout.csv  donchian_short_breakout.csv  ensemble_60.csv  fill_next_open.csv  heikin_ashi_20.csv  keltner_30.csv  lookahead_30.csv  ma_crossover_25.csv  mean_reversion_50.csv  momentum_50.csv  orb_weekly_30.csv  oscillator_30.csv  parabolic_sar_50.csv  pyramid_40.csv  starc_30.csv  supertrend_30.csv  trending_100.csv  trending_50.csv  tsmom_30.csv  turtle_s1_30.csv  turtle_s2_70.csv  vol_sizing_20.csv  williams_range_20.csv
pine-script-docs/: concepts.md  error-messages.md  faq.md  language.md  migration-guides.md  release-notes.md  welcome.md  where-can-i-get-more-information.md  writing.md
pine-script-docs/concepts/: alerts.md  backgrounds.md  bar-plotting.md  bar-states.md  chart-information.md  time.md  (+15 more)
pine-scripts/: README.md
schemas/: README.md  strategy-artifact.schema.json
scripts/: analyze_yolo.py  analyze_yolo_randomness.py  merge_exploration_state.py  merge_leaderboards.py  merge_per_symbol_leaderboard.py  send_signal_email.py  test_batched.py  test_import_only.py  test_kernel_simple.py  test_kernels.py  verify.ps1  verify.sh
(+224 files in other folders)
