[workspace]
resolver = "2"
members = [
    "crates/trendlab-core",
    "crates/trendlab-cli",
    "crates/trendlab-bdd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TrendLab Contributors"]

[workspace.dependencies]
# Core dependencies
polars = { version = "0.45", features = ["lazy", "parquet", "csv", "dtype-date", "dtype-datetime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async (for data fetching)
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Testing
cucumber = "0.21"
async-trait = "0.1"

# Internal crates
trendlab-core = { path = "crates/trendlab-core" }
