[workspace]
resolver = "2"
members = [
    "crates/trendlab-core",
    "crates/trendlab-cli",
    "crates/trendlab-bdd",
    "crates/trendlab-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TrendLab Contributors"]

[workspace.dependencies]
# Core dependencies
polars = { version = "0.45", features = ["lazy", "parquet", "csv", "dtype-date", "dtype-datetime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallel processing
rayon = "1.10"

# Async (for data fetching)
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Crypto (for checksums)
sha2 = "0.10"

# Config files
toml = "0.8"

# Testing
cucumber = "0.21"
async-trait = "0.1"

# Terminal styling
colored = "2.1"
console = "0.15"

# Terminal charts
textplots = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTML templating
maud = "0.26"

# Internal crates
trendlab-core = { path = "crates/trendlab-core" }
