[workspace]
resolver = "2"
members = [
    "crates/trendlab-core",
    "crates/trendlab-cli",
    "crates/trendlab-bdd",
    "crates/trendlab-engine",
    "crates/trendlab-tui",
    "crates/trendlab-launcher",
    "crates/trendlab-logging",
    # GUI deprecated - see docs/roadmap-gui-resurrection.md
    # "apps/trendlab-gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TrendLab Contributors"]

[workspace.dependencies]
# Core dependencies
polars = { version = "0.45", features = ["lazy", "parquet", "csv", "dtype-date", "dtype-datetime", "rolling_window", "ewma", "abs", "cum_agg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallel processing
rayon = "1.10"

# Async (for data fetching)
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Crypto (for checksums)
sha2 = "0.10"

# Config files
toml = "0.8"

# Testing
cucumber = "0.21"
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Terminal styling
colored = "2.1"
console = "0.15"

# Terminal charts
textplots = "0.8"

# Machine Learning
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTML templating
maud = "0.26"

# Internal crates
trendlab-core = { path = "crates/trendlab-core" }
trendlab-engine = { path = "crates/trendlab-engine" }
trendlab-logging = { path = "crates/trendlab-logging" }
