[package]
name = "trendlab-bdd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BDD tests for TrendLab using cucumber-rs"

[dependencies]
trendlab-core.workspace = true

[dev-dependencies]
cucumber.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures = "0.3"
csv = "1.3"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.14"
trendlab-cli = { path = "../trendlab-cli" }
regex = "1.11"

[[test]]
name = "bdd"
harness = false
