[package]
name = "trendlab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for TrendLab backtester"

[[bin]]
name = "trendlab"
path = "src/main.rs"

[dependencies]
trendlab-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
