[package]
name = "trendlab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for TrendLab backtester"

[lib]
name = "trendlab_cli"
path = "src/lib.rs"

[[bin]]
name = "trendlab-cli"
path = "src/main.rs"

[dependencies]
trendlab-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
sha2.workspace = true
rayon.workspace = true
colored.workspace = true
console.workspace = true
maud.workspace = true
