[package]
name = "trendlab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for TrendLab backtester"

[lib]
name = "trendlab_cli"
path = "src/lib.rs"

[[bin]]
name = "trendlab-cli"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "TrendLab Contributors"
copyright = "2024-2026"
license-file = ["../../LICENSE", "0"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/trendlab-cli", "usr/bin/", "755"],
    ["target/release/trendlab-tui", "usr/bin/", "755"],
]
extended-description = """
TrendLab is a research-grade trend-following backtesting lab.
Includes both CLI and TUI interfaces for running parameter sweeps
and analyzing trading strategies."""

[dependencies]
trendlab-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
polars.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
sha2.workspace = true
rayon.workspace = true
colored.workspace = true
console.workspace = true
maud.workspace = true
