[package]
name = "trendlab-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types, strategies, and metrics for TrendLab backtester"

[dependencies]
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
rayon.workspace = true
toml.workspace = true
linfa.workspace = true
linfa-clustering.workspace = true
ndarray.workspace = true
rand.workspace = true

[dev-dependencies]
# Unit tests use standard Rust test framework
