[package]
name = "trendlab-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared engine for TrendLab TUI and GUI - state management and worker"

[dependencies]
trendlab-core.workspace = true
tracing.workspace = true
chrono.workspace = true
polars.workspace = true
tokio.workspace = true
reqwest.workspace = true
rayon.workspace = true
rand.workspace = true
rand_chacha = "0.3"
urlencoding = "2.1"
