[package]
name = "trendlab-logging"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared logging infrastructure for TrendLab applications"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
ipc = ["tokio"]
