[package]
name = "trendlab-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Interactive TUI for TrendLab backtesting"

[dependencies]
trendlab-core.workspace = true
trendlab-logging.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
tokio.workspace = true
reqwest.workspace = true
rayon.workspace = true
rand.workspace = true
rand_chacha = "0.3"
urlencoding = "2.1"

[[bin]]
name = "trendlab-tui"
path = "src/main.rs"
