[package]
name = "trendlab-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
trendlab-core = { workspace = true }
trendlab-launcher = { path = "../../../crates/trendlab-launcher" }
chrono = { workspace = true }
polars = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
anyhow = { workspace = true }
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }


